nginx/ingress-demo/test/ingress.yaml
apiVersion: networking.k8s.io/v1beta1    
kind: Ingress    
metadata:    
  name: my-nginx    
spec:    
  ingressClassName: nginx # use only with k8s version >= 1.18.0    
  rules:    
  - host: app.terraebb.com    
    http:    
      paths:    
      - path: /    
        backend:    
          serviceName: my-nginx    
          servicePort: 80
